--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,15 +17,17 @@ set(CMAKE_CXX_EXTENSIONS ON)			# Allow compiler specific extensions to the stand
 add_subdirectory (src)
 
 
-
 # ---------------------------------------------------------- Google Test
 include(FetchContent)
+
 FetchContent_Declare(
   googletest
-  URL https://github.com/google/googletest/archive/7d76a231b0e29caf86e68d1df858308cd53b2a66.zip
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  GIT_TAG        v1.15.2
 )
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE) # For Windows: Prevent overriding the parent project's compiler/linker settings
+
 FetchContent_MakeAvailable(googletest)
 
 include(GoogleTest)
