--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -28,10 +28,10 @@ jobs:
         key: ${{ runner.os }}-dependencies
 
     - name: configure
-      run: cmake -Bbuild -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/$INSTALL_LOCATION -DProject_ENABLE_CODE_COVERAGE=1
+      run: cmake -Bbuild -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/$INSTALL_LOCATION -DProject_ENABLE_CODE_COVERAGE=1 -DCMAKE_CXX_FLAGS=-fopenmp -fpic
       
     - name: build
-      run: cmake --build build --config $BUILD_TYPE -j4 -DCMAKE_CXX_FLAGS=-fopenmp -fpic
+      run: cmake --build build --config $BUILD_TYPE -j4
 
     - name: run tests
       run: |
