--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,21 +3,18 @@
 # -------------------- Set up the executable
 add_executable (HelloExe "")
 
+
+# --- Set up libraries
+add_subdirectory (doStuff)
+
+
 # --- Add source files to the exe
 target_sources (HelloExe
 	PRIVATE
 		main.cpp
 	)
 
-#target_sources (HelloExe
-#	PRIVATE
-#		util.cpp
-#	)
-
-# -------------------- Add Fortran subdirectory
-#add_subdirectory(myFortran_lib)
-
-
-# -------------------- Link the Fortran lib to the exe
-#target_link_libraries(HelloExe myFortran)
-#set_target_properties(HelloExe PROPERTIES LINKER_LANGUAGE Fortran)
+target_link_libraries(HelloExe 
+	PRIVATE 
+		DoStuff
+	)
