--- a/.github/workflows/lintAndFormat.yaml
+++ b/.github/workflows/lintAndFormat.yaml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
     - run: pip install cpplint
-    - run: cpplint --filter=-legal/copyright --recursive . 
+    - run: cpplint --recursive . 
 
 
 # run clang-tidy on pull requests and pushes
