--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,20 +1,20 @@
-
-
-# -------------------- Set up the executable
-add_executable (HelloExe "")
-
+# --------------------
+# Set up the executable
+add_executable(
+    HelloExe
+    ""
+    )
 
 # --- Set up libraries
-add_subdirectory (doStuff)
-
+add_subdirectory(doStuff)
 
 # --- Add source files to the exe
-target_sources (HelloExe
-	PRIVATE
-		main.cpp
-	)
+target_sources(
+    HelloExe
+    PRIVATE main.cpp
+    )
 
-target_link_libraries(HelloExe 
-	PRIVATE 
-		DoStuff
-	)
+target_link_libraries(
+    HelloExe
+    PRIVATE DoStuff
+    )
