--- a/src/doStuff/CMakeLists.txt
+++ b/src/doStuff/CMakeLists.txt
@@ -1,9 +1,13 @@
-
 # -------------------- Set up the executable
-add_library (DoStuff STATIC "")
+add_library(
+    DoStuff
+    STATIC
+    ""
+    )
 
 # --- Add source files to the exe
-target_sources (DoStuff
-	PRIVATE
-		do.cpp      do.h
-	)
+target_sources(
+    DoStuff
+    PRIVATE do.cpp
+            do.h
+    )
