--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -8,40 +8,32 @@ on:
     branches: [ main ]
 
 env:
-  BUILD_TYPE: Release
-  INSTALL_LOCATION: .local
+  CTEST_OUTPUT_ON_FAILURE: 1
   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
   CPM_SOURCE_CACHE: ${{ github.workspace }}/cpm_modules
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[ci skip]')"
 
     steps:
-    - uses: actions/checkout@v2
-      
-    - name: cache dependencies
-      uses: actions/cache@v2
-      id: cache
-      with:
-        path: ${{ github.workspace }}/${{ env.INSTALL_LOCATION }}
-        key: ${{ runner.os }}-dependencies
+      - uses: actions/checkout@v3
 
-    - name: configure
-      run: cmake -Bbuild -DCMAKE_CXX_FLAGS=-fopenmp -fprofile-arcs -ftest-coverage -DCMAKE_EXE_LINKER_FLAGS=--coverage
-      
-    - name: build
-      run: cmake --build build --config $BUILD_TYPE -j4
+      - uses: actions/cache@v3
+        with:
+          path: "**/cpm_modules"
+          key: ${{ github.workflow }}-cpm-modules-${{ hashFiles('**/CMakeLists.txt', '**/*.cmake') }}
 
-    - name: run tests
-      run: |
-        cd build
-        ctest -C $BUILD_TYPE -VV
+      - name: configure
+        run: cmake -Stest -Bbuild -DENABLE_TEST_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS=-fopenmp -fprofile-arcs -ftest-coverage
 
-    - name: Code coverage using Codecov 
-      run: bash <(curl -s https://codecov.io/bash) 
+      - name: build
+        run: cmake --build build -j4
 
-    - name: install project
-      run: cmake --build build --target install --config Release 
+      - name: test
+        run: |
+          cd build
+          ctest --build-config Debug
+
+      - name: collect code coverage
+        run: bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
