--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,26 +14,33 @@ env:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[ci skip]')"
 
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+      
+    - name: cache dependencies
+      uses: actions/cache@v2
+      id: cache
+      with:
+        path: ${{ github.workspace }}/${{ env.INSTALL_LOCATION }}
+        key: ${{ runner.os }}-dependencies
 
-      - uses: actions/cache@v3
-        with:
-          path: "**/cpm_modules"
-          key: ${{ github.workflow }}-cpm-modules-${{ hashFiles('**/CMakeLists.txt', '**/*.cmake') }}
+    - name: configure
+      run: cmake -Bbuild -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/$INSTALL_LOCATION -DProject_ENABLE_CODE_COVERAGE=1 -DCMAKE_CXX_FLAGS=-fopenmp
+      
+    - name: build
+      run: cmake --build build --config $BUILD_TYPE -j4
 
-      - name: configure
-        run: cmake -Stest -Bbuild -DENABLE_TEST_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS=-fopenmp
+    - name: run tests
+      run: |
+        cd build
+        ctest -C $BUILD_TYPE -VV
 
-      - name: build
-        run: cmake --build build -j4
+    - name: Code coverage using Codecov 
+      run: bash <(curl -s https://codecov.io/bash) 
 
-      - name: test
-        run: |
-          cd build
-          ctest --build-config Debug
-
-      - name: collect code coverage
-        run: bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
+    - name: install project
+      run: cmake --build build --target install --config Release 
