--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -40,5 +40,15 @@ jobs:
         cd build
         ctest -C $BUILD_TYPE -VV
 
-    - name: Code coverage using Codecov 
-      run: bash <(curl -s https://codecov.io/bash) 
+    - name: lcov
+      uses: danielealbano/lcov-action@v4.1
+      with:
+        gcov_path: /usr/bin/gcov-9
+        remove_patterns: 3rdparty,tests
+
+    - uses: codecov/codecov-action@v4
+      with:
+        files: ${{github.workspace}}/coverage.info
+        name: cachegrand-server
+        fail_ci_if_error: false
+        verbose: true
