--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -22,10 +22,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          style: '.clang-format'  # Use .clang-format config file
-          tidy-checks: '.clang-tidy' # Use .clang-tidy config file
-          # only 'update' a single comment in a pull request thread.
-          thread-comments: ${{ github.event_name == 'pull_request' && 'update' }}
+          style: '.clang-format'     # Use .clang-format config file
+          tidy-checks: '.clang-tidy' # Use .clang-tidy   config file
+          thread-comments: ${{ github.event_name == 'pull_request' && 'update' }} # only 'update' a single comment in a pull request thread.
       - name: Fail fast?!
         if: steps.linter.outputs.checks-failed > 0
         run: exit 1
