--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -50,12 +50,11 @@ jobs:
 
     - name: Code Coverage - Generation
       run: |
-        cd ${{github.workspace}}/build
+        cd ${{github.workspace}}
         lcov --no-external --capture --directory . --ignore mismatch --rc geninfo_unexecuted_blocks=1 --ignore-errors inconsistent --output-file coverage.info
 
     - uses: codecov/codecov-action@v4
       with:
         files: ${{github.workspace}}/coverage.info
-        name: cachegrand-server
-        fail_ci_if_error: false
+        fail_ci_if_error: true
         verbose: true
